--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html>
 <head>
-<title>ideepsearch.net ÓòÃû³öÊÛ</title>
+<title>ideepsearch.net åŸŸåå‡ºå”®</title>
 <meta name="description" content="ideepsearch.net" />
 <meta name="keywords" content="ideepsearch.net" /> 
  
@@ -12,14 +12,14 @@ html, body {   height: 100%;}
 html, body, h1, h2, h3, h4, h5, h6, hr, p, iframe, dl, dt, dd, ul, ol, li, pre, form, button, input, textarea, th, td, fieldset {    margin: 0;    padding: 0;}
  
 .wrap{ margin: 0px auto;min-width: 990px;max-width: 1190px}
-.banner1{ background:url(images/banner_jiaoyi.jpg) ; margin:0 auto; height: 343px; text-align: center}
+.banner1{ background:url(banner_jiaoyi.jpg) ; margin:0 auto; height: 343px; text-align: center}
 .main-out{  margin:0 auto;padding:0 0 20px 0}
 .orangebtn{background-color: #ff8400; display: inline-block; padding: 0px 20px; color: #fff; height:50px;line-height: 50px;font-size: 18px; border-radius: 3px;margin-top: 20px}
 .orangebtn:hover{color: #fff;background-color: #f16600; }
 .banner1 h1{font-size:48px; color: #feff07;font-family: Tahoma, sans-serif;padding: 60px 0 20px 0}
 .banner1 p{color: #fff;font-size: 20px;}
 .domain-con{ padding: 20px 50px;position: relative;}
-.left{ background: #f6f6f6 url(images/jiaoyixq_jiaoyi.jpg) no-repeat left top; height:100%;  width: 100%; margin-right: 320px;font-size: 16px}
+.left{ background: #f6f6f6 url(jiaoyixq_jiaoyi.jpg) no-repeat left top; height:100%;  width: 100%; margin-right: 320px;font-size: 16px}
 .domainout{ padding: 50px 380px 50px 100px}
 .domainout p{ line-height: 50px;}
 .domainout p span{ display: inline-block; width: 120px; text-align: right;margin-right: 5px}
@@ -39,7 +39,7 @@ a{text-decoration: none;}
 <div class="banner1">
 <div class="wrap">
 <h1>ideepsearch.net</h1>
-<p>ÄúËù·ÃÎÊµÄÓòÃûÕıÔÚ³öÊÛ£¡<br>
+<p>æ‚¨æ‰€è®¿é—®çš„åŸŸåæ­£åœ¨å‡ºå”®ï¼<br>
    This domain is on sale. </p>
    </div>
 </div>
@@ -49,24 +49,24 @@ a{text-decoration: none;}
 <div class="domain-con">
 <div class="left">
 <div class="domainout">
-<p><span>ÓòÃû£º</span>ideepsearch.net</p>
-<p><span>½»Ò×ÀàĞÍ£º</span>Ò»¿Ú¼Û</p>
-<p><span>½áÊøÊ±¼ä£º</span>2099-12-31 23:59:59</p>
-<p><span>ÊÛ¼Û£º</span><strong class="red">200000 CNY</strong></p>
-<p><span>¼ò½é£º</span>³¬ÖµÓòÃû</p>
-<p><span></span><a href="javascript:;" class="orangebtn" target="_blank">Á¢¼´¹ºÂò£¨Buy it !£©</a></p>
+<p><span>åŸŸåï¼š</span>ideepsearch.net</p>
+<p><span>äº¤æ˜“ç±»å‹ï¼š</span>ä¸€å£ä»·</p>
+<p><span>ç»“æŸæ—¶é—´ï¼š</span>2099-12-31 23:59:59</p>
+<p><span>å”®ä»·ï¼š</span><strong class="red">200000 CNY</strong></p>
+<p><span>ç®€ä»‹ï¼š</span>è¶…å€¼åŸŸå</p>
+<p><span></span><a href="javascript:;" class="orangebtn" target="_blank">ç«‹å³è´­ä¹°ï¼ˆBuy it !ï¼‰</a></p>
 </div>
 </div>
 <div class="right">
-<h2>ÁªÏµÂô¼Ò¹ºÂò</h2>
+<h2>è”ç³»å–å®¶è´­ä¹°</h2>
 <div class="imgpic text-c">
-<img src="https://im.gurl.eu.org/file/AgACAgEAAxkDAAIvSGe0gSYUIuHFjt-rn4M-oLaHvtvNAAIFrzEbaT2pRchcXBBtLil2AQADAgADeAADNgQ.jpg" alt="Âô¼Ò" style="max-width:200px"/>
-<p class="mt-10">Âô¼Ò£ºMotto</p>
+<img src="https://im.gurl.eu.org/file/AgACAgEAAxkDAAIvSGe0gSYUIuHFjt-rn4M-oLaHvtvNAAIFrzEbaT2pRchcXBBtLil2AQADAgADeAADNgQ.jpg" alt="å–å®¶" style="max-width:200px"/>
+<p class="mt-10">å–å®¶ï¼šMotto</p>
 </div>
 <div class="contact">
-<p>QQ£º 3505724969</p>
-<p>µç»°£º028-12345678 </p>
-<p>ÓÊÏä£º3505724969@qq.com</p>
+<p>QQï¼š 3505724969</p>
+<p>ç”µè¯ï¼š028-12345678 </p>
+<p>é‚®ç®±ï¼š3505724969@qq.com</p>
 </div>
 </div>
 </div>
